# qfit

./: .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  LICENSE  README  README.it  TODO  meson.build  meson_options.txt
CMakeModules/: FindQwt.cmake  FindQwt6.cmake
src/: CMakeLists.txt  fittools.cpp  fittools.h  main.cpp  meson.build  qfit.cpp  qfit.h
src/cli/: CMakeLists.txt  main.cpp  meson.build
src/gui/: CMakeLists.txt  about.cpp  about.h  main.cpp  maindialog.ui  maindialog_noqwt.ui  meson.build  qfit.cpp  qfit.desktop  qfit.h  resources.qrc
src/lib/: .gitignore  CMakeLists.txt  fitconfig.h  fitconfig.h.in  fittools.cpp  fittools.h  libfile.cpp  libfile.h  log.cpp  log.h  meson.build
