cmake_minimum_required(VERSION 2.6)

project(qfit)

set(QFIT_VERSION_MAJOR 0)
set(QFIT_VERSION_MINOR 2)
set(QFIT_VERSION_PATCH 0)

SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -g")

option(USE_GUI "Build the Qt interface" ON)

set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMakeModules")
find_package(Qwt6)

add_subdirectory(src)


# CPack vars
set(CPACK_PACKAGE_VERSION_MAJOR ${QFIT_VERSION_MAJOR})
set(CPACK_PACKAGE_VERSION_MINOR ${QFIT_VERSION_MINOR})
set(CPACK_PACKAGE_VERSION_PATCH ${QFIT_VERSION_PATCH})

set(CPACK_PACKAGE_VENDOR "qfit development team")
set(CPACK_GENERATOR STGZ TBZ2)
set(CPACK_SOURCE_GENERATOR TGZ)
set(CPACK_SOURCE_PACKAGE_FILE_NAME "qfit-${QFIT_VERSION_MAJOR}.${QFIT_VERSION_MINOR}.${QFIT_VERSION_PATCH}")
set(CPACK_PACKAGE_FILE_NAME "qfit-${QFIT_VERSION_MAJOR}.${QFIT_VERSION_MINOR}.${QFIT_VERSION_PATCH}-i686-linux")
set(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_CURRENT_SOURCE_DIR}/LICENSE)
set(CPACK_PACKAGE_DESCRIPTION_FILE ${CMAKE_CURRENT_SOURCE_DIR}/README)

set(CPACK_SOURCE_IGNORE_FILES
	".git*"
	".kdev4"
	"qfit.kdev4"
	"${CMAKE_CURRENT_SOURCE_DIR}/build")

include(CPack)
